--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,13 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
-trigger:
-- master
+#trigger:
+#- master
 
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
   buildConfiguration: 'Release'
+  dotnet_version_suffix: $(BuildID).$(SourceBranchName)
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet build NWebsec-CI.sln --configuration $(buildConfiguration)
+  displayName: 'dotnet build NWebsec-CI.sln $(buildConfiguration)'
