--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - script: echo "##vso[task.setvariable variable=versionSuffix]--version-suffix $(Build.BuildID).$(Build.SourceBranchName)"
-  condition: and(succeeded(),ne('$(Build.SourceBranchName)','buildmaster'))
+  condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'buildmaster'))
   displayName: 'Version suffix'
 
 - script: dotnet pack $(sln) --configuration $(buildConfiguration) --no-build -o $(Build.ArtifactStagingDirectory) $(versionSuffix)
