--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   sln: 'NWebsec-CI.sln'
+  versionSuffix: '' #overridden for branches before pack.
 
 steps:
 - task: DotNetCoreCLI@2
