--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,11 +38,15 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: nupkgs
 
+- task: NuGetToolInstaller@0
+  inputs:
+    checkLatest: true # Optional
+
 - task: NuGetCommand@2
   displayName: 'NuGet push'
   inputs:
     command: 'custom'
-    arguments: '$(Build.ArtifactStagingDirectory)/*.nupkgs -ApiKey $(nugetApiKey) -Source https://api.nuget.org/v3/index.json -SkipDuplicate'
+    arguments: '$(Build.ArtifactStagingDirectory)\*.nupkgs -ApiKey $(nugetApiKey) -Source https://api.nuget.org/v3/index.json -SkipDuplicate'
 
 #- task: DotNetCoreCLI@2
 #  condition: and(succeeded(), in(variables['Build.SourceBranchName'], 'buildmaster', 'azure-pipelines'))
