--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,25 +38,19 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: nupkgs
 
-- task: NuGetToolInstaller@0
-  inputs:
-    checkLatest: true # Optional
+#- task: NuGetToolInstaller@0
+#  inputs:
+#    checkLatest: true # Optional
 
-- task: NuGetCommand@2
-  displayName: 'NuGet push'
-  inputs:
-    command: 'custom'
-    arguments: '$(Build.ArtifactStagingDirectory)\*.nupkgs -ApiKey $(nugetApiKey) -Source https://api.nuget.org/v3/index.json -SkipDuplicate'
-
-#- task: DotNetCoreCLI@2
-#  condition: and(succeeded(), in(variables['Build.SourceBranchName'], 'buildmaster', 'azure-pipelines'))
+#- task: NuGetCommand@2
 #  displayName: 'NuGet push'
 #  inputs:
-#    command: push
-#    arguments: '--skip-duplicate --api-key $(nugetApiKey)'
-#    nuGetFeedType: external
-#    externalEndPoint: $(nugetConnection)
-    #versioningScheme: byEnvVar
-    #versionEnvVar: version
+#    command: 'custom'
+#    arguments: '$(Build.ArtifactStagingDirectory)\*.nupkgs -ApiKey $(nugetApiKey) -Source https://api.nuget.org/v3/index.json -SkipDuplicate'
 
-    #condition: (succeeded(),in($(Build.SourceBranchName), 'master', 'dev'))
+- task: DotNetCoreCLI@2
+  condition: and(succeeded(), in(variables['Build.SourceBranchName'], 'buildmaster', 'azure-pipelines'))
+  displayName: 'NuGet push'
+  inputs:
+    command: push
+    arguments: '$(Build.ArtifactStagingDirectory)/*.nupkg --api-key $(nugetApiKey) --source https://api.nuget.org/v3/index.json --skip-duplicate'
