--- a/src/NWebsec.AspNetCore.Middleware/NWebsec.AspNetCore.Middleware.csproj
+++ b/src/NWebsec.AspNetCore.Middleware/NWebsec.AspNetCore.Middleware.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\version.props" />
   
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Description>NWebsec middleware for ASP.NET Core applications. NWebsec helps you set important security headers and detect potentially dangerous redirects. See project website for documentation.</Description>
     <Copyright>Copyright © 2016 - 2018</Copyright>
     <AssemblyTitle>NWebsec.AspNetCore.Middleware</AssemblyTitle>
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.2" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
