--- a/src/NWebsec.AspNetCore.Mvc/NWebsec.AspNetCore.Mvc.csproj
+++ b/src/NWebsec.AspNetCore.Mvc/NWebsec.AspNetCore.Mvc.csproj
@@ -5,7 +5,7 @@
   <Import Project="..\version.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Description>NWebsec attributes for ASP.NET Core MVC applications. NWebsec helps you set important security headers, detect potentially dangerous redirects, and control cache headers. See project website for documentation.</Description>
     <Copyright>Copyright © 2016 - 2018</Copyright>
     <AssemblyTitle>NWebsec.AspNetCore.Mvc</AssemblyTitle>
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.2" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
-</Project>
+  
+  </Project>
